<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lucky_background"
    android:padding="24dp"
    tools:ignore="Autofill, HardCodedText"
    android:id="@+id/create_event_options_root">

    <EditText
        android:id="@+id/create_event_entrants_num_view"
        style="@style/RoundedEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:hint=""
        android:inputType="number"
        android:padding="8dp"
        android:text="@string/create_event_entrants_num_text"
        android:textAlignment="textStart"
        android:textColor="@color/lucky_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/create_event_deadline_view"
        style="@style/RoundedEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:hint="DD-MM-YYYY"
        android:inputType="text"
        android:padding="8dp"
        android:text="@string/create_event_deadline_text"
        android:textAlignment="textStart"
        android:textColor="@color/lucky_white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView1"
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="Event Date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_event_deadline_view" />


    <EditText
        android:id="@+id/create_event_start_date"
        style="@style/RoundedEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:hint="DD-MM-YYYY"
        android:inputType="text"
        android:padding="8dp"
        android:text="@string/create_event_deadline_text"
        android:textAlignment="textStart"
        android:textColor="@color/lucky_white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />


    <TextView
        android:id="@+id/textView0"
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="Price"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_event_start_date" />

    <EditText
        android:id="@+id/create_event_ticket_price"
        style="@style/RoundedEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:hint=""
        android:inputType="number"
        android:padding="8dp"
        android:text="@string/create_event_deadline_text"
        android:textAlignment="textStart"
        android:textColor="@color/lucky_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView0" />

    <TextView
        android:id="@+id/textView4"
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="Registration Deadline"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="Number of Attendees"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_event_ticket_price" />

    <TextView
        android:id="@+id/textView8"
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="Enable Geolocation"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_event_entrants_num_view" />

    <CheckBox
        android:id="@+id/create_event_geolocation_checkbox_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/create_event_notification_checkbox_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="Send Notifications"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        style="@style/GenericText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:text="Number of Entrants (Optional)"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_event_attendees_num_view" />

    <EditText
        android:id="@+id/create_event_attendees_num_view"
        style="@style/RoundedEditTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/airbnbcereal_w_bk"
        android:hint=""
        android:inputType="number"
        android:padding="8dp"
        android:text="@string/create_event_attendees_num_text"
        android:textAlignment="textStart"
        android:textColor="@color/lucky_white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/create_event_button"
        style="@style/ActiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawableLeft="@drawable/createevent_icon"
        android:drawablePadding="8dp"
        android:fontFamily="@font/airbnbcereal_w_bd"
        android:text="Create Event"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>