<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:ignore="HardcodedText, ContentDescription, AutoFill">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lucky_background"
        android:padding="24dp">

        <include
            android:id="@+id/notification_top_bar"
            layout="@layout/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/create_event_name_view"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/airbnbcereal_w_bk"
            android:hint="@string/event_name_text"
            android:inputType="text"
            android:textSize="14sp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/airbnbcereal_w_bd"
            android:text="Event Details"
            android:textAlignment="textStart"
            android:textColor="@color/lucky_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_event_name_view" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/airbnbcereal_w_bd"
            android:text="Event Name"
            android:textAlignment="textStart"
            android:textColor="@color/lucky_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_event_pic_view" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/airbnbcereal_w_bd"
            android:text="Event Rules"
            android:textAlignment="textStart"
            android:textColor="@color/lucky_white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_event_details_view" />

        <EditText
            android:id="@+id/create_event_details_view"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/airbnbcereal_w_bk"
            android:hint="@string/event_details_text"
            android:inputType="text"
            android:textSize="14sp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/create_event_rules_view"
            style="@style/RoundedEditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/airbnbcereal_w_bk"
            android:hint="@string/event_rules_text"
            android:inputType="text"
            android:textSize="14sp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/create_event_next_button"
            style="@style/ActiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/right_arrow"
            android:drawablePadding="8dp"
            android:fontFamily="@font/airbnbcereal_w_bd"
            android:text="Next"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/create_event_pic_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corners"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_top_bar"
            app:layout_constraintDimensionRatio="16:9"
            app:tint="#404040"
            app:tintMode="multiply" />

        <ImageButton
            android:id="@+id/create_event_pic_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/create_event_pic_view"
            app:layout_constraintEnd_toEndOf="@+id/create_event_pic_view"
            app:layout_constraintStart_toStartOf="@+id/create_event_pic_view"
            app:layout_constraintTop_toTopOf="@+id/create_event_pic_view"
            app:srcCompat="@drawable/eventcreationpic_icon" />

        <TextView
            android:id="@+id/textView_facility_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Select Facility"
            android:textColor="@color/lucky_white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/create_event_rules_view" />

        <Spinner
            android:id="@+id/facility_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/lucky_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_facility_selection" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>